data/derived/sp14/progs/unify/prog3129.ml.out
Characters 28-51:
  wwhile (fun b -> (f b <> b),b);;
         ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
